Inserts dropdown options relates #13 #7

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>AutoPok&eacute;</title>
+  <script src="main.js" type="text/javascript" async></script>
 </head>
 
 <body>
@@ -14,6 +15,11 @@
     </input>
   </label>
     <datalist id="search_bar">
+      <option class="option"></option>
+      <option class="option"></option>
+      <option class="option"></option>
+      <option class="option"></option>
+      <option class="option"></option>
     </datalist>
     <button>
       GO!
