Created dom.js + added theme to index + added validation + event listener + new value check #22 #6 #7

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
   <form>
     <label>Search for your Pokemon!
-      <input list="search_bar">
+      <input id='search_input' list="search_bar">
     </input>
   </label>
     <datalist id="search_bar">
@@ -25,6 +25,7 @@
       GO!
     </button>
   </form>
+  <audio controls autoplay loop><source src='../media/01.-pokemon-theme.mp3' type='audio/mpeg'> Your Browsers' crap</audio>
 </body>
 
 </html>
