added script to index #22 #6 #7

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>AutoPok&eacute;</title>
   <script src="main.js" type="text/javascript" async></script>
+  <script src="dom.js" type="text/javascript" async></script>
 </head>
 
 <body>
