--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
   <form>
     <label>Search for your Pokemon!
-      <input list="search_bar">
+      <input list="search_bar" id='js-pokeInput'>
     </input>
   </label>
     <datalist id="search_bar">
