adding tests for backend relates #2

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,18 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>AutoPok&eacute;</title>
   <script src="main.js" type="text/javascript" async></script>
   <script src="dom.js" type="text/javascript" async></script>
 </head>
 
 <body>
+  <div class = "pokeContainer">
   <!-- <audio controls autoplay loop><source src='../media/01.-pokemon-theme.mp3' type='audio/mpeg'> Your Browsers' crap</audio> -->
   <form>
     <label>Search for your Pokemon!
-      <input list="search_bar" id='js-pokeInput'>
+      <input list="search_bar" id='js-pokeInput' class-='pokeInput'>
     </input>
   </label>
     <datalist id="search_bar">
@@ -27,6 +29,7 @@
       GO!
     </button>
   </form>
+</div>
 
 </body>
 
