Uses pokeapi relates #15 #12

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- <audio controls autoplay loop><source src='../media/01.-pokemon-theme.mp3' type='audio/mpeg'> Your Browsers' crap</audio> -->
-  <form>
+  <form id='js-pokeForm'>
     <label>Search for your Pokemon!
       <input list="search_bar" id='js-pokeInput'>
     </input>
