final locations on css hopefully will work on all screen *gulp*

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,15 @@
   <title>AutoPok&eacute;</title>
   <script src="main.js" type="text/javascript" async></script>
   <script src="dom.js" type="text/javascript" async></script>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
 <body>
 
   <!-- <audio controls autoplay loop><source src='../media/01.-pokemon-theme.mp3' type='audio/mpeg'> Your Browsers' crap</audio> -->
   <form>
-    <label>Search for your Pokemon!
+    <label>
+      <h2> Search for your Pokemon!</h2>
       <input list="search_bar" id='js-pokeInput' class-='pokeInput'>
     </input>
   </label>
