theme song working

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <!-- <audio controls autoplay loop><source src='../media/01.-pokemon-theme.mp3' type='audio/mpeg'> Your Browser's crap</audio> -->
+  <audio controls autoplay loop><source src='./media/pkmn.mp3' type='audio/mpeg'> Your Browser's crap</audio>
   <form id='js-pokeForm'>
     <h2> Search for your Pokemon!</h2>
     <label>Search for your Pokemon!
